--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,5 +1,19 @@
 body {
-    background-color: rgb(87, 124, 124);
+    background-color: rgb(70, 96, 96);
+}
+
+.container {
+    border: 2px solid  black;
+    border-radius: 5px;
+    background-color: rgb(63, 106, 70);
+    text-align: center;
+    margin:  60px 250px;
+    height: 75vh;
+}
+
+h1 {
+    font-size: 45px;
+    margin: 10px;
 }
 
 img{
@@ -7,13 +21,54 @@ img{
     min-height: 17vw;
     max-width:17vw;
     min-width: 17vw;
+    border-radius: 15px;
+    /* touch-action: manipulation; */
  
  /*Scale down will take the necessary specified space that is 100px x 100px without stretching the image*/
      /* object-fit:scale-down; */
  
  }
 
- .product-container{
+p {
+    font-size: 22px;
+    margin: 10px
+} 
+
+strong {
+    text-decoration: underline;
+}
+
+/* .product-container{
     position: relative;
-    text-align: center; 
+    text-align: center;
+    border: 2px solid  rgb(91, 60, 83);
+    border-radius: 5px;
+} */
+
+
+
+
+/* CSS */
+.button-54 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  background-color: white;
+}
+
+.button-54:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
 }
