--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -1,24 +1,37 @@
 form {
-    background-color: rgb(63, 106, 70);;
-    text-align: center;
+  background-color: rgb(63, 106, 70);
+  text-align: center;
+  font-size: x-large;
+}
+
+.formprops {
+  text-align: left;
+  /* float: left; */
+  color: red;
+  margin-left: 325px
+}
+
+.forminput {
+  float: right;
+  margin-right: 325px
 }
 
 body {
-    background-color: rgb(70, 96, 96);
+  background-color: rgb(70, 96, 96);
 }
 
 .container {
-    border: 2px solid  black;
-    border-radius: 5px;
-    background-color: rgb(63, 106, 70);
-    text-align: center;
-    margin:  60px 250px;
-    height: 75vh;
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: rgb(63, 106, 70);
+  text-align: center;
+  margin: 60px 250px;
+  height: 75vh;
 }
 
 h1 {
-    font-size: 45px;
-    margin: 10px;
+  font-size: 45px;
+  margin: 30px;
 }
 
 .button-54 {
