--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,11 +1,13 @@
 body {
-    background-color: rgb(87, 124, 124);
+    background-color: rgb(70, 96, 96);
 }
 
 h1 {
     /* justify-content: center; */
     text-align: center;
+    font-family: "Open Sans", sans-serif;
 }
+
 .product-container{
     position: relative;
     text-align: center; 
@@ -50,4 +52,28 @@ ul{
 .links {
     display: flex;
     justify-content: center;
+}
+
+.button-54 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #000;
+    cursor: pointer;
+    border: 3px solid;
+    padding: 0.25em 0.5em;
+    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+    position: relative;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    background-color: white;
+}
+
+.button-54:active {
+    box-shadow: 0px 0px 0px 0px;
+    top: 5px;
+    left: 5px;
 }
