--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,12 @@
 
 
 body {
-    background-image: url("https://s.abcnews.com/images/US/survivalists-preppers-abc-jef-171102_16x9_1600.jpg"); 
+  background-image: url("https://s.abcnews.com/images/US/survivalists-preppers-abc-jef-171102_16x9_1600.jpg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
@@ -48,4 +53,38 @@ a {
     left: 5px;
 }
   
- 
+/* Styles for small screens */
+@media only screen and (max-width: 767px) {
+    body {
+      background-size: top center;
+    }
+    h1 {
+      font-size: 20pt;
+    }
+  
+    a {
+      font-size: 16pt;
+    }
+  
+    .button-54 {
+      font-size: 14px;
+    }
+  } 
+
+  .home-container {
+    position: relative;
+    height: 100vh; /* Set height to fill viewport */
+  }
+  
+  .home-container:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-image: url(${backgroundImageUrl}); */
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+  }
